[package]
name = "bounce"
version = "0.1.0"
authors = ["Taegyun Kim <k.taegyun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitcoin_hashes = { version = "0.9" }
chrono = "0.4"
prost = "0.7"
rand = { version = "0.6" }
secp256k1 = { version = "0.20.1", features = ["rand", "bitcoin_hashes"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"

[dev-dependencies]
num-bigint = "0.2.6"
openssl = "0.10"
openssl-sys = "0.9"
pkcs11 = "0.5.0"

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "cubesat"
path = "src/bin/cubesat.rs"

[[bin]]
name = "ground-station"
path = "src/bin/ground-station.rs"
