[package]
name = "bounce"
version = "0.1.0"
authors = ["Taegyun Kim <k.taegyun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bls-signatures-rs = "0.1.0"
bn = { package = "witnet-bn", version = "0.4.5" }
chrono = "0.4"
prost = "0.7"
rand = "0.7"
rand_core = "0.5.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"

[dev-dependencies]
hex = "0.4.2"
num-bigint = "0.2.6"
openssl = "0.10"
openssl-sys = "0.9"
pkcs11 = "0.5.0"

[build-dependencies]
tonic-build = "0.4"

[[bin]]
name = "ground-station"
path = "src/bin/ground-station.rs"

[[bin]]
name = "comms-hub"
path = "src/bin/comms-hub.rs"
