[package]
name = "cubesat"
version = "0.1.0"
authors = ["Taegyun Kim <k.taegyun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
secp256k1 = {version = "0.20.1", features = ["rand", "bitcoin_hashes"]}
rand = { version = "0.6" }
